# LLM-Memory

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PLAN.md  README.md  pyproject.toml
migrations/: alembic.ini
migrations/alembic/: env.py
migrations/alembic/versions/: 0001_initial_schema.py  0002_integrity_and_retrieval_hardening.py
src/lcmemory/: __init__.py  config.py  logging.py
src/lcmemory/compaction/: AGENTS.md  llm_client.py  policy.py  prompts.py  selector.py  service.py
src/lcmemory/db/: base.py  models.py  session.py
src/lcmemory/db/repositories/: __init__.py  categories.py  compaction_jobs.py  raw_memories.py  summaries.py
src/lcmemory/domain/: enums.py  graph_types.py  schemas.py
src/lcmemory/ingestion/: service.py  validators.py
src/lcmemory/retrieval/: AGENTS.md  describe.py  expand.py  grep.py  query_delegate.py
src/lcmemory/tools/: api.py  contracts.py
src/lcmemory/workers/: compaction_worker.py  scheduler.py
tests/: conftest.py
tests/unit/: test_categories.py  test_domain.py  test_expand_engine.py  test_llm_client.py  test_query_delegate.py  test_scheduler.py
